# codelibrarian

./: CLAUDE.md  QUICKSTART.md  README.md  ROADMAP.md  essay-draft.md  pyproject.toml
.codelibrarian/: config.toml
docs/plans/: 2026-02-24-mermaid-diagrams.md  2026-02-25-llm-query-rewriting-design.md  2026-02-25-llm-query-rewriting.md
hooks/: install.sh  post-commit  post-merge
src/codelibrarian/: __init__.py  cli.py  config.py  diagrams.py  embeddings.py  html_renderer.py  indexer.py  mcp_server.py  models.py  query_rewriter.py  searcher.py
src/codelibrarian/parsers/: __init__.py  base.py  python_parser.py  treesitter_parser.py
src/codelibrarian/storage/: __init__.py  store.py
tests/: test_diagrams.py  test_html_renderer.py  test_indexer.py  test_kotlin_parser.py  test_parsers.py  test_query_rewriter.py  test_searcher.py  test_store.py  test_swift_parser.py
tests/fixtures/kotlin_sample/: Models.kt
tests/fixtures/python_sample/: models.py  services.py
tests/fixtures/swift_sample/: Models.swift
tests/fixtures/typescript_sample/: utils.ts
vscode-extension/: .vscodeignore  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/autoindex/: SaveWatcher.ts
vscode-extension/src/commands/: callers.ts  hierarchy.ts  reindex.ts  search.ts
vscode-extension/src/mcp/: McpClient.ts  McpSupervisor.ts  types.ts
vscode-extension/src/providers/: CallGraphProvider.ts  CodeLensProvider.ts
vscode-extension/src/statusbar/: StatusBarManager.ts
