[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codelibrarian"
version = "0.1.0"
description = "Self-maintaining code index for LLM and human queries via MCP and CLI"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "sqlite-vec>=0.1.6",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
codelibrarian = "codelibrarian.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codelibrarian"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
